Fixed Navbar Being Overlapped
Changed z-index of navbar

--- a/css/scss/_navbar.scss
+++ b/css/scss/_navbar.scss
@@ -23,6 +23,7 @@ body {
   justify-content: center;
   align-items: center;
   flex-direction: column;
+  z-index: 9999;
   ul{ // Mobile Style
     list-style:none;
     margin: 0;
